[gd_scene load_steps=3 format=2]

[ext_resource path="res://kitchen_scene/product/fridge/product.gd" type="Script" id=1]
[ext_resource path="res://kitchen_scene/product/modulator.tscn" type="PackedScene" id=2]

[node name="Product" type="TextureRect"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="Modulator" parent="." instance=ExtResource( 2 )]

[connection signal="mouse_entered" from="." to="." method="_on_Product_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Product_mouse_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
